k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim  # name of the PVC we just wrote
      containers:
        - name: postgres
          image: postgres
          ports: 
            - containerPort: 5432
          volumeMounts:  # "now that we got access to the storage, here's how i want it to be used inside my container" ("Take that volume/storage, and make it available inside this container, in this way")
            - name: postgres-storage # same name as the volumes' name above ("go back to the volumes entry, and find some piece of storage we just asked k8s for". And that piece of storage will be used for this particular 'volumeMount')
              mountPath: /var/lib/postgresql/data # designating where inside the container this storage should be made available (anything the container stores inside this folder will be actually stored inside our volume) (similar to docker volume) (so we designate the data directory that posgress will use for storing data on the hard drive: the actual data we want to backup)
              subPath: postgres  #'subPath': any data inside the container that is stored inside 'mountPath' will be stored in a folder called 'postrgres' inside the actual PV (only for postgres database)
