k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:   # addtional config options that'll specify some higher level config around the ingress obj that gets created
    kubernetes.io/ingress.class: nginx # telling k8s that we want to create an ingress controller based on nginx project
    nginx.ingress.kubernetes.io/rewrite-target: /  # configure how our copy of nginx behaves. After sending a req to Server, rewrite the '/api' route (like we did with regex on elasticbean project. So we don't have to write '/api' on every route on the server itself. We don't want to put config inside our server that tightly coupled it to the routing that got requests to the server in the first place.)
spec:
  rules:
    - http:
        paths: 
          - path: /
            backend:  # if req comes to path of '/', send the req to whatever pods that are governed by the service of this 'serviceName'
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /api/
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
